# otakuhub

./: .gitignore  Cargo.toml  LICENSE.md  README.md  config-example.toml  leptosfmt.toml  tailwind.config.js
.cargo/: config.toml
end2end/playwright-report/: index.html
end2end/tests/: frontpage.ts
migrations/: 20241209104319_user_demo.sql
src/: app.rs  lib.rs  main.rs  routes.rs
src/apis/: mod.rs  tracker.rs
src/apis/anilist/: mod.rs  tracker.rs
src/apis/anilist/anime/: fetch.rs  model.rs  query.graphql
src/apis/anilist/character/: fetch.rs  model.rs
src/apis/anilist/manga/: fetch.rs  model.rs
src/apis/jikan/: mod.rs  shared.rs  tracker.rs
src/apis/jikan/anime/: fetch.rs  model.rs
src/apis/jikan/character/: fetch.rs  model.rs
src/apis/jikan/manga/: fetch.rs  model.rs
src/auth/: auth.rs  mod.rs  server.rs  users.rs
src/components/: footer.rs  mod.rs  nav_bar.rs  search_bar.rs  theme_selector.rs
src/config/: consts.rs  contexts.rs  mod.rs  settings.rs  shared.rs  types.rs
src/db/: backend.rs
src/errors/: error_template.rs
src/pages/: about.rs  home.rs  login.rs  mod.rs  profile.rs  root.rs  search.rs  settings.rs  signup.rs
src/utils/: search.rs
